--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://ec2-54-235-92-244.compute-1.amazonaws.com:5432/dblioij90v6vgp?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=User
+spring.datasource.password=Password
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.timeBetweenEvictionRunsMillis=3600000
+
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
 
