--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,23 @@ dependencies {
 	
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile("org.postgresql:postgresql:9.4-1200-jdbc41") 
-	
+	compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
 test {
 	useJUnitPlatform()
 }
 
+task stage() {
+    dependsOn clean, war
+}
+war.mustRunAfter clean
 
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
