Consertando configuração do banco e outros problemas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
+spring.datasource.jdbc-url=jdbc:postgresql://ec2-54-235-92-244.compute-1.amazonaws.com:5432/dblioij90v6vgp?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 spring.datasource.url=jdbc:postgresql://ec2-54-235-92-244.compute-1.amazonaws.com:5432/dblioij90v6vgp?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-spring.datasource.username=User
-spring.datasource.password=Password
+
+spring.datasource.username=${DBUSER}
+spring.datasource.password=${DBPASSWORD}
+
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.testWhileIdle=true
@@ -16,12 +19,7 @@ spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
-
-
