--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -35,23 +34,18 @@ dependencies {
 	
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile("org.postgresql:postgresql:9.4-1200-jdbc41") 
-	compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
 test {
 	useJUnitPlatform()
 }
 
-task stage() {
-    dependsOn clean, war
-}
-war.mustRunAfter clean
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
 
 task copyToLib(type: Copy) {
     into "$buildDir/server"
-    from(configurations.compile) {
-        include "webapp-runner*"
-    }
+    from(configurations.compile)
 }
 
 stage.dependsOn(copyToLib)
