--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
 
 task copyToLib(type: Copy) {
-    into "$buildDir/server"
+    into "$buildDir/libs"
     from(configurations.compile)
 }
 
