--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework=INFO
 
+spring.profiles.active=production
 
